--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,13 @@
 # found at https://github.com/github/gitignore and is customized for my 
 # OS X setup.
 
+# Atari stuff
+*.a65
+# *.obx
+# *.xex
+*.lst
+
+
 # Emacs stuff #
 ###############
 *~
