--- a/app/resources.rc
+++ b/app/resources.rc
@@ -31,8 +31,8 @@ DISPLAY_LIST_ADDRESS rcasm 'dlist.asm'
 
 #STRINGS_ADDRESS rcasm 'strings.asm'
 
-BACKGROUND_MEM rcdata 'assets/tlo1.gr8'
+BACKGROUND_MEM rcdata 'assets/tlo2.gr8'
 
 ; rmt module
 RMT_PLAYER_ADDRESS RMTPLAY 'assets/rmt_feat.asm' 0
-RMT_MODULE_ADDRESS RMT 'assets/starekino.rmt'
+RMT_MODULE_ADDRESS RMT 'assets/wsk_a000.rmt'
