--- a/app/resources.rc
+++ b/app/resources.rc
@@ -35,4 +35,4 @@ BACKGROUND_MEM rcdata 'assets/tlo2.gr8'
 
 ; rmt module
 RMT_PLAYER_ADDRESS RMTPLAY 'assets/rmt_feat.asm' 0
-RMT_MODULE_ADDRESS RMT 'assets/wsk_a000.rmt'
+RMT_MODULE_ADDRESS RMT 'assets/starekino.rmt'
