--- a/app/resources.rc
+++ b/app/resources.rc
@@ -32,7 +32,8 @@ DISPLAY_LIST_ADDRESS rcasm 'dlist.asm'
 #STRINGS_ADDRESS rcasm 'strings.asm'
 
 BACKGROUND_MEM rcdata 'assets/tlo4.gr8'
-GUY1_MEM rcdata 'assets/ludzik1.gr8'
+GUY1_MEM rcdata 'assets/ludzik1i.gr8'
+GUY3_MEM rcdata 'assets/ludzik2i.gr8'
 
 ; rmt module
 RMT_PLAYER_ADDRESS RMTPLAY 'assets/rmt_feat.asm' 0
