--- a/app/resources.rc
+++ b/app/resources.rc
@@ -33,7 +33,7 @@ TITLE_LIST_ADDRESS rcasm 'dlist_title.asm'
 #STRINGS_ADDRESS rcasm 'strings.asm'
 
 BACKGROUND_MEM rcdata 'assets/tlo4.gr8'
-TITLEBACK_MEM rcdata 'assets/plansza_pusta.gr8'
+TITLEBACK_MEM rcdata 'assets/plansza_pusta2.gr8'
 GUY1_MEM rcdata 'assets/ludzik1.gr8'
 GUY3_MEM rcdata 'assets/ludzik3.gr8'
 
