--- a/app/resources.rc
+++ b/app/resources.rc
@@ -24,18 +24,17 @@
 ;        from color index set as PAR0, in VBXE pallette nr 1
 ; 
 ; remove # to uncomment and use examples below:
-
-#CHARSET_ADDRESS rcdata 'font.fnt'
  
 DISPLAY_LIST_ADDRESS rcasm 'dlist.asm'
-TITLE_LIST_ADDRESS rcasm 'dlist_title.asm'
+; TITLE_LIST_ADDRESS rcasm 'dlist_title.asm'
 
 #STRINGS_ADDRESS rcasm 'strings.asm'
 
 BACKGROUND_MEM rcdata 'assets/tlo4.gr8'
-TITLEBACK_MEM rcdata 'assets/plansza_pusta3.gr8'
-TITLE_MEM rcdata 'assets/plansza_title.gr8'
-TITLEEND_MEM rcdata 'assets/plansza_koniec.gr8'
+
+TITLE1_SCREEN rcdata 'assets/plansza_wsk.scr'
+CHARSET_FONT rcdata 'assets/wsk.fnt'
+TITLE1_FONT1 rcdata 'assets/plansza_wsk.fnt'
 
 GUY1_MEM rcdata 'assets/ludzik6_1.gr8'
 GUY2_MEM rcdata 'assets/ludzik6_2.gr8'
